add missing docs pages; update references links

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -55,7 +55,7 @@ CLERK_SECRET_KEY={{secret}}
 
 ## Mount `<ClerkProvider />`
 
-Update your root layout to include the `<ClerkProvider />` wrapper. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps the `<body/>` to enable the context to be accessible anywhere within the app.
+Update your root layout to include the [`<ClerkProvider />`](/docs/components/clerk-provider#clerk-provider) wrapper. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps the `<body/>` to enable the context to be accessible anywhere within the app.
 
 <CodeBlockTabs options={["App Router", "Pages"]}>
 ```tsx copy filename="app/layout.tsx"
@@ -128,7 +128,7 @@ With this middleware, your entire application is protected. If you try to access
 
 ## Build your own sign in and sign up pages
 
-In addition to the Account Portal, Clerk also offers a set of prebuilt components that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch all route.
+In addition to the Account Portal, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch all route.
 
 
 
@@ -136,42 +136,42 @@ In addition to the Account Portal, Clerk also offers a set of prebuilt component
 
 
 <CodeBlockTabs options={["App Router", "Pages"]}>
-```tsx copy filename="app/sign-up/[[...sign-up]]/page.tsx"
-import { SignUp } from "@clerk/nextjs";
+  ```tsx copy filename="app/sign-up/[[...sign-up]]/page.tsx"
+  import { SignUp } from "@clerk/nextjs";
 
-export default function Page() {
-  return <SignUp />;
-}
-```
+  export default function Page() {
+    return <SignUp />;
+  }
+  ```
 
-```tsx copy filename="/pages/sign-up/[[...index]].tsx"
-import { SignUp } from "@clerk/nextjs";
+  ```tsx copy filename="/pages/sign-up/[[...index]].tsx"
+  import { SignUp } from "@clerk/nextjs";
 
-export default function Page() {
-  return <SignUp />;
-}
-```
+  export default function Page() {
+    return <SignUp />;
+  }
+  ```
 </CodeBlockTabs>
 
 ### Build your sign in page
 
 
 <CodeBlockTabs options={["App Router", "Pages"]}>
-```tsx copy filename="app/sign-in/page.tsx"
-import { SignIn } from "@clerk/nextjs";
+  ```tsx copy filename="app/sign-in/page.tsx"
+  import { SignIn } from "@clerk/nextjs";
 
-export default function Page() {
-  return <SignIn />;
-}
-```
+  export default function Page() {
+    return <SignIn />;
+  }
+  ```
 
-```tsx copy filename="/pages/sign-in/[[...index]].tsx"
-import { SignIn } from "@clerk/nextjs";
+  ```tsx copy filename="/pages/sign-in/[[...index]].tsx"
+  import { SignIn } from "@clerk/nextjs";
 
-export default function Page() {
-  return <SignIn />;
-}
-```
+  export default function Page() {
+    return <SignIn />;
+  }
+  ```
 </CodeBlockTabs>
 
 <Callout type="info" emoji="ℹ️">
@@ -194,7 +194,7 @@ These values control the behavior of the components when you sign in or sign up 
 
 ## Embed the `<UserButton />`
 
-The `<UserButton />` allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
+The [`<UserButton />`](/docs/users/user-button) allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
 
 You can add it anywhere you want, but next to the logo in your main application page is a good start.
 
@@ -229,19 +229,19 @@ export default function Example() {
 
 ## Sign up for your application
 
-Now start your Next.js application via `npm run dev` , visit `http://localhost:3000`, and sign up to get access to your application.
+Now start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 
 
 
 ## Read session and user data
 
-Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Next.js application.  Here are examples of how to use these helpers in both the client and server side to get you started.
+Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Next.js application. Here are examples of how to use these helpers in both the client and server side to get you started.
 
 ### Client side
 
 #### `useAuth`
 
-The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+The [`useAuth`](/docs/references/react/use-auth) hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
 ```tsx copy filename="example.tsx"
 "use client";
@@ -265,7 +265,7 @@ export default function Example() {
 
 #### `useUser`
 
-The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
+The [`useUser`](/docs/references/react/use-user) hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
 ```tsx copy filename="example.tsx"
 "use client";
@@ -286,7 +286,7 @@ export default function Example() {
 
 #### API Routes
 
-You can protect your API routes by using the `getAuth` helper and retrieve data from your own systems.
+You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
 
 ```tsx copy filename="pages/api/auth.ts"
 import type { NextApiRequest, NextApiResponse } from "next";
@@ -303,7 +303,7 @@ export default function handler(req: NextApiRequest, res: NextApiResponse) {
 }
 ```
 
-In some cases, you may need the full user object. For example, if you want to access the user's email address or name. You can use the `clerkClient` helper to get the full user object.
+In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the `clerkClient` helper to get the full `User` object.
 
 
 ```tsx copy filename="pages/api/auth.ts"
@@ -330,78 +330,78 @@ export default async function handler(
 
 ### Server side render user data
 
-<Tabs items={["App Directory", "Pages Directory"]}>
-<Tab>
-  #### **`currentUser()`**
+<Tabs items={["App router", "Pages router"]}>
+  <Tab>
+    #### **`currentUser()`**
 
-Current user loads the User object for the authenticated user from Clerk's backend API. This is helpful if you want to render information like their first and last name directly from the server.
+    [`currentUser()`](/docs/references/nextjs/current-user) loads the `User` object for the authenticated user from Clerk's backend API. This is helpful if you want to render information, like their first and last name, directly from the server.
 
-Under the hood, this calls `fetch()` so it is automatically deduped per request.
+    Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
-```tsx copy filename="page.tsx"
-import { currentUser } from "@clerk/nextjs/app-beta";
-import type { User } from "@clerk/nextjs/api";
+    ```tsx copy filename="page.tsx"
+    import { currentUser } from "@clerk/nextjs/app-beta";
+    import type { User } from "@clerk/nextjs/api";
 
-export default async function Page() {
-  const user: User | null = await currentUser();
-  // ...
-}
-```
+    export default async function Page() {
+      const user: User | null = await currentUser();
+      // ...
+    }
+    ```
 
-#### **`auth()`**
+    #### **`auth()`**
 
-Clerk has introduced a new `auth()` helper that returns the same Authentication Object as `getAuth(req)` in middleware, getServerSideProps, and API routes.
+    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same `Authentication` Object as `getAuth(req)` in middleware, getServerSideProps, and API routes.
 
-Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
+    Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
 
-```tsx copy filename="app/page.tsx"
-import { auth } from '@clerk/nextjs/app-beta';
+    ```tsx copy filename="app/page.tsx"
+    import { auth } from '@clerk/nextjs/app-beta';
 
-export default function Page() {
-  const { userId } : { userId: string | null } = auth();
-  // ...
-}
-```
-</Tab>
-<Tab>
+    export default function Page() {
+      const { userId } : { userId: string | null } = auth();
+      // ...
+    }
+    ```
+  </Tab>
 
-You can access the active session and user data in your `getServerSideProps` using the `getAuth` helper.
+  <Tab>
+    You can access the active session and user data in your `getServerSideProps` using the [`getAuth`](/docs/references/nextjs/get-auth) helper.
 
-<Callout type="info" emoji="ℹ️">
-Please note the addition of buildClerkProps in the return statement, which informs our React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
-</Callout>
+    <Callout type="info" emoji="ℹ️">
+      Please note the addition of buildClerkProps in the return statement, which informs our React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
+    </Callout>
 
-```tsx copy filename="pages/example.tsx"
-import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
-import { GetServerSideProps } from "next";
+    ```tsx copy filename="pages/example.tsx"
+    import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
+    import { GetServerSideProps } from "next";
 
-export const getServerSideProps: GetServerSideProps = async (ctx) => {
-  const { userId } = getAuth(ctx.req);
+    export const getServerSideProps: GetServerSideProps = async (ctx) => {
+      const { userId } = getAuth(ctx.req);
 
-  if (!userId) {
-    // handle user is not logged in.
-  }
+      if (!userId) {
+        // handle user is not logged in.
+      }
 
-  // Load any data your application needs for the page using the userId
-  return { props: { ...buildClerkProps(ctx.req) } };
-};
-```
+      // Load any data your application needs for the page using the userId
+      return { props: { ...buildClerkProps(ctx.req) } };
+    };
+    ```
 
-You can also access the full user object before passing it to the page using the `clerkClient` helper.
+    You can also access the full user object before passing it to the page using the `clerkClient` helper.
 
-```tsx copy filename="pages/example.tsx"
-import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
-import { GetServerSideProps } from "next";
+    ```tsx copy filename="pages/example.tsx"
+    import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
+    import { GetServerSideProps } from "next";
 
-export const getServerSideProps: GetServerSideProps = async (ctx) => {
-  const { userId } = getAuth(ctx.req);
+    export const getServerSideProps: GetServerSideProps = async (ctx) => {
+      const { userId } = getAuth(ctx.req);
 
-  const user = userId ? await clerkClient.users.getUser(userId) : undefined;
+      const user = userId ? await clerkClient.users.getUser(userId) : undefined;
 
-  return { props: { ...buildClerkProps(ctx.req, { user }) } };
-};
-```
-</Tab>
+      return { props: { ...buildClerkProps(ctx.req, { user }) } };
+    };
+    ```
+  </Tab>
 </Tabs>
 
 ### Next steps
