--- a/docs/references/nextjs/get-auth.mdx
+++ b/docs/references/nextjs/get-auth.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 
 # `getAuth()`
 
-The `getAuth()` helper retrieves the authentication state allowing you to protect your API routes or gather relevant data.
+The `getAuth()` helper retrieves the authentication state, allowing you to protect your API routes or gather relevant data. The variables available in the response can be found [here](/docs/references/nextjs/authentication-object).
 
 ## Usage
 
@@ -85,49 +85,3 @@ export default async function handler(
   return res.status(200).json({});
 }
 ```
-
-<Tables
-  headings={["Variables", "Description"]}
-  headingsMeta={[{}, {maxWidth:'300px'}]}
-  rows={[
-  {
-  cells: [
-  "actor",
-  "Holds identifier for the user that is impersonating the current user",
-  ],
-  },
-  {
-  cells: [
-  "debug",
-  "Used to help debug issues when using Clerk in development",
-  ],
-  },
-  {
-  cells: [
-  "getToken",
-  "A function that returns a promise that resolves to the current user's session token, can also be used to retrieve a custom JWT template",
-  ],
-  },
-  {
-  cells: ["orgId", "The current user's organization ID"],
-  },
-  {
-  cells: ["orgRole", "The current user's organization role"],
-  },
-  {
-  cells: ["orgSlug", "The current user's organization slug"],
-  },
-  {
-  cells: ["organization", "The current user's organization object"],
-  },
-  {
-  cells: ["sessionClaim", " The current user's session claim"],
-  },
-  {
-  cells: ["sessionId", "The current user's session ID"],
-  },
-  {
-  cells: ["userId", "The current user's unique identifier"],
-  },
-  ]}
-/>
