--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -9,7 +9,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useAuth()`
 
-The `useAuth` hook provides lightweight access to the current auth state, helpers to manage the state and load data from external sources.
+The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
 ## Usage
 
