Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -21,7 +21,7 @@ export const config = {
 
 ### Using `afterAuth()` for fine-grained control
 
-Some developers will need to handle specific cases such as detecting if the user is inside an organization, or handle redirects differently. This cases can be handled with `afterAuth()`.
+Some developers will need to handle specific cases such as handling redirects differently or detecting if a user is inside an organization. These cases can be handled with `afterAuth()`.
 
 ```ts filename="middleware.ts" copy
 import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
@@ -43,7 +43,7 @@ export default authMiddleware({
 
 ### Using `beforeAuth()` to execute middleware before authentication
 
-If you need to additional middleware handlers to execute before Clerk's authentication middleware, use `beforeAuth()`. An example where the middleware handler from `next-intl` is executed can be seen below.
+If you need additional middleware handlers to execute before Clerk's authentication middleware, use `beforeAuth()`. An example where the middleware handler from `next-intl` is executed can be seen below.
 
 ```ts filename="middleware.ts" copy
 import { authMiddleware } from "@clerk/nextjs";
@@ -87,7 +87,7 @@ export const config = {
 };
 ```
 
-If you are building your own sign in pages, you don't need to add these pages to your publicRoutes. They will be inferred from your `.env` file:
+If you are building your own sign in pages, you don't need to add these pages to your `publicRoutes`. They will be inferred from your `.env` file:
 
 ```ts filename=".env"
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
