apply suggestions from code review

--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -18,8 +18,8 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    <CodeBlockTabs>
-      ```jsx copy filename="/pages/organization-switcher/[[...index]].tsx"
+    <CodeBlockTabs options={["App router", "Pages router"]}>
+      ```jsx copy filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
       export default function OrganizationSwitcherPage() {
@@ -31,7 +31,7 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
       }
       ```
 
-      ```jsx copy filename="/app/organization-switcher/[[...organization-switcher]]/page.tsx"
+      ```jsx copy filename="/pages/organization-switcher/[[...index]].[jsx/tsx]"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
       export default function OrganizationSwitcherPage() {
