--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -21,8 +21,8 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    <CodeBlockTabs options={["Pages router", "App router"]}>
-      ```jsx copy filename="userButtonExample.tsx"
+    <CodeBlockTabs options={["App router", "Pages router"]}>
+      ```jsx copy filename="userButtonExample.[jsx/tsx]"
       import {
         ClerkProvider,
         SignedIn,
@@ -57,8 +57,8 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 
       export default MyApp;
       ```
-      
-      ```jsx copy filename="userButtonExample.tsx"
+
+      ```jsx copy filename="userButtonExample.[jsx/tsx]"
       import {
         ClerkProvider,
         SignedIn,
