--- a/docs/references/nextjs/current-user.mdx
+++ b/docs/references/nextjs/current-user.mdx
@@ -7,7 +7,7 @@ description: Access the User object inside of your server components, actions an
 
 The `currentUser` helper returns the `User` object of the currently active user. This is the same `User` object that is returned by the [`useUser`](/docs/references/react/use-user) hook. However, it can be used in server components, route handlers, and server actions.
 
-```tsx copy filename="app/page.tsx"
+```tsx copy filename="app/page.[jsx/tsx]"
 import { currentUser } from '@clerk/nextjs';
 
 export default async function Page() {
