--- a/docs/references/nextjs/server-actions.mdx
+++ b/docs/references/nextjs/server-actions.mdx
@@ -13,7 +13,7 @@ Below are some examples of usage both in server components or client components.
 
 ### Protect your actions
 
-```tsx copy filename="actions.ts"
+```tsx copy filename="actions.[js/ts]"
 import { auth } from '@clerk/nextjs';
 
 export default function AddToCart() {
@@ -43,7 +43,7 @@ export default function AddToCart() {
 
 Current user data is important for data enrichment. You can use the `currentUser()` helper to achieve this.
 
-```tsx copy filename="app/page.tsx"
+```tsx copy filename="app/page.[jsx/tsx]"
 import { currentUser } from '@clerk/nextjs';
 
 export default function AddHobby() {
@@ -82,7 +82,7 @@ When using client components, you need to make sure you use prop drilling to ens
 
 #### Server Action code
 
-```tsx copy filename="actions.ts"
+```tsx copy filename="actions.[js/ts]"
 'use server'
 import { auth } from '@clerk/nextjs';
 
@@ -97,7 +97,7 @@ export async function addItem(formData: FormData) {
 
 #### Server page
 
-```tsx copy filename="page.tsx"
+```tsx copy filename="page.[jsx/tsx]"
 import UI from "./UI";
 import { addItem } from "./actions"
 export default function Hobby() {
@@ -109,7 +109,7 @@ export default function Hobby() {
 
 #### Client component
 
-```tsx copy filename="ui.tsx"
+```tsx copy filename="ui.[jsx/tsx]"
 "use client"
 
 export default function UI({ addItem }) {
@@ -130,7 +130,7 @@ export default function UI({ addItem }) {
 
 #### Server Action Code
 
-```tsx copy filename="actions.ts"
+```tsx copy filename="actions.[js/ts]"
 'use server'
 import { currentUser } from "@clerk/nextjs";
 
@@ -150,7 +150,7 @@ export async function addHobby(formData: FormData) {
 
 #### Server Page
 
-```tsx copy filename="page.tsx
+```tsx copy filename="page.[jsx/tsx]"
 import UI from "./ui";
 import { addHobby } from "./actions"
 export default function Hobby() {
@@ -162,7 +162,7 @@ export default function Hobby() {
 
 #### Client Component
 
-```tsx copy filename="ui.tsx"
+```tsx copy filename="ui.[jsx/tsx]"
 "use client"
 
 export default function UI({ addHobby }) {
