--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -22,7 +22,15 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   <Tab>
     You can embed the `<SignIn />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
-    <CodeBlockTabs options={["Pages router", "App router"]}>
+    <CodeBlockTabs options={["App router", "Pages router"]}>
+      ```jsx copy filename="/app/sign-in/[[...sign-in]]/page.[jsx/tsx]"
+      import { SignIn } from "@clerk/nextjs";
+
+      export default function Page() {
+        return <SignIn />;
+      }
+      ```
+
       ```jsx copy filename="/pages/sign-in/[[...index]].tsx"
       import { SignIn } from "@clerk/nextjs";
 
@@ -31,19 +39,11 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
       );
       export default SignInPage;
       ```
-
-      ```jsx copy filename="/app/sign-in/[[...sign-in]]/page.tsx"
-      import { SignIn } from "@clerk/nextjs";
-
-      export default function Page() {
-        return <SignIn />;
-      }
-      ```
     </CodeBlockTabs>
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/sign-in/[[...index]].tsx"
+    ```jsx copy filename="/pages/sign-in/[[...index]].[jsx/tsx]"
     import { SignIn } from "@clerk/react";
 
     const SignInPage = () => (
