--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -24,7 +24,15 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
 
     <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out our [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
-    <CodeBlockTabs options={["Pages router", "App router"]}>
+    <CodeBlockTabs options={["App router", "Pages router"]}>
+      ```jsx copy filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
+      import { SignUp } from "@clerk/nextjs";
+
+      export default function Page() {
+        return <SignUp />;
+      }
+      ```
+
       ```jsx copy filename="/pages/sign-up/[[...index]].[jsx/tsx]"
       import { SignUp } from "@clerk/nextjs";
 
@@ -32,14 +40,6 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
         <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
       );
       export default SignUpPage;
-      ```
-
-      ```jsx copy filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
-      import { SignUp } from "@clerk/nextjs";
-
-      export default function Page() {
-        return <SignUp />;
-      }
       ```
     </CodeBlockTabs>
   </Tab>
