--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -18,22 +18,22 @@ The `<CreateOrganization />` component is used to render an organization creatio
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    <CodeBlockTabs options={["Pages router", "App router"]}>
-      ```jsx copy filename="/pages/create-organization/[[...index]].tsx"
+    <CodeBlockTabs options={["App router", "Pages router"]}>
+      ```jsx copy filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
+      import { CreateOrganization } from "@clerk/nextjs";
+
+      export default function CreateOrganizationPage() {
+        return <CreateOrganization />;
+      }
+      ```
+      
+      ```jsx copy filename="/pages/create-organization/[[...index]].[jsx/tsx]"
       import { CreateOrganization } from "@clerk/nextjs";
 
       export default function CreateOrganizationPage() {
         return (
             <CreateOrganization routing="path" path="/create-organization" />
         )
-      }
-      ```
-
-      ```jsx copy filename="/app/create-organization/[[...create-organization]]/page.tsx"
-      import { CreateOrganization } from "@clerk/nextjs";
-
-      export default function CreateOrganizationPage() {
-        return <CreateOrganization />;
       }
       ```
     </CodeBlockTabs>
