--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -20,23 +20,23 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
   <Tab>
     You can embed the `<OrganizationProfile />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
   
-    <CodeBlockTabs options={["Pages router", "App router"]}>
-      ```jsx copy filename="/pages/organization-profile/[[...index]].tsx"
-      import { OrganizationProfile } from "@clerk/nextjs";
-
-      export default function OrganizationProfilePage() {
-        return (
-          <OrganizationProfile routing='path' path="/organization-profile" />
-        )
-      }
-      ```
-
-      ```jsx copy filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
+    <CodeBlockTabs options={["App router", "Pages router"]}>
+      ```jsx copy filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
       import { OrganizationProfile } from "@clerk/nextjs";
 
       export default function OrganizationProfilePage() {
         return (
           <OrganizationProfile />
+        )
+      }
+      ```
+
+      ```jsx copy filename="/pages/organization-profile/[[...index]].[jsx/tsx]"
+      import { OrganizationProfile } from "@clerk/nextjs";
+
+      export default function OrganizationProfilePage() {
+        return (
+          <OrganizationProfile routing='path' path="/organization-profile" />
         )
       }
       ```
