apply suggestions from code review

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -20,9 +20,9 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
   <Tab>
-    You can embed the `<SignIn />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
+    You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
-    <CodeBlockTabs options={["App router", "Pages router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx copy filename="/app/sign-in/[[...sign-in]]/page.[jsx/tsx]"
       import { SignIn } from "@clerk/nextjs";
 
@@ -105,7 +105,7 @@ All props below are optional.
       cells: [
         "appearance",
         "object",
-        "Controls the overall look and feel of the component. See [Appearance](/docs/components/ui/appearance) for more information.",
+        "Controls the overall look and feel of the component. See <a href="/docs/components/ui/appearanc">Appearance</a> for more information.",
       ]
     },
     {
