--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -20,11 +20,11 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
   <Tab>
-    You can embed the `<SignUp />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
+    You can embed the `<SignUp />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
 
-    <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out our [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
+    <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out the [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
-    <CodeBlockTabs options={["App router", "Pages router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx copy filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
       import { SignUp } from "@clerk/nextjs";
 
@@ -106,7 +106,7 @@ All props below are optional.
       cells: [
         "appearance",
         "object",
-        "Controls the overall look and feel of the component. See [Appearance](/docs/components/ui/appearance) for more information.",
+        "Controls the overall look and feel of the component. See <a href="/docs/components/ui/appearance/">Appearance</a> for more information.",
       ]
     },
     {
