--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -18,7 +18,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    <CodeBlockTabs options={["App router", "Pages router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx copy filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
       import { CreateOrganization } from "@clerk/nextjs";
 
