--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -18,15 +18,15 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    You can embed the `<OrganizationProfile />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
+    You can embed the `<OrganizationProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
   
-    <CodeBlockTabs options={["App router", "Pages router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx copy filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
       import { OrganizationProfile } from "@clerk/nextjs";
 
       export default function OrganizationProfilePage() {
         return (
-          <OrganizationProfile />
+          <OrganizationProfile routing='path' path="/organization-profile" />
         )
       }
       ```
@@ -36,7 +36,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
 
       export default function OrganizationProfilePage() {
         return (
-          <OrganizationProfile routing='path' path="/organization-profile" />
+          <OrganizationProfile />
         )
       }
       ```
