--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -18,7 +18,7 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    <CodeBlockTabs options={["App router", "Pages router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx copy filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
