--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -13,8 +13,8 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
-    <CodeBlockTabs options={["App router", "Pages router"]}>
-      ```jsx copy filename="app/index.js"
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="app/page.js"
       import { SignOutButton } from "@clerk/nextjs";
 
       export default function Home() {
@@ -94,8 +94,8 @@ You can create a custom button by wrapping your own button, or button text, in t
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
-    <CodeBlockTabs options={["App router", "Pages router"]}>
-      ```jsx copy filename="app/index.js"
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="app/page.js"
       import { SignOutButton } from "@clerk/nextjs";
 
       export default function Home() {
