--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -19,10 +19,10 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    You can embed the `<UserProfile />` component using the [Next.js optional catch all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
+    You can embed the `<UserProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
 
-    <CodeBlockTabs options={["Pages router", "App router"]}>
-      ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```jsx copy filename="/app/user-profile/[[...user-profile]]/page.tsx"
       import { UserProfile } from "@clerk/nextjs";
 
       const UserProfilePage = () => (
@@ -32,7 +32,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
       export default UserProfilePage;
       ```
 
-      ```jsx copy filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
       import { UserProfile } from "@clerk/nextjs";
 
       const UserProfilePage = () => (
