--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -57,7 +57,7 @@ CLERK_SECRET_KEY={{secret}}
 
 Update your root layout to include the [`<ClerkProvider />`](/docs/components/clerk-provider#clerk-provider) wrapper. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps the `<body/>` to enable the context to be accessible anywhere within the app.
 
-<CodeBlockTabs options={["App Router", "Pages"]}>
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```tsx copy filename="app/layout.tsx"
 import { ClerkProvider } from '@clerk/nextjs'
 
@@ -128,14 +128,14 @@ With this middleware, your entire application is protected. If you try to access
 
 ## Build your own sign in and sign up pages
 
-In addition to the Account Portal, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch all route.
+In addition to the Account Portal, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch-all route.
 
 
 
 ### Build your sign up page
 
 
-<CodeBlockTabs options={["App Router", "Pages"]}>
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx copy filename="app/sign-up/[[...sign-up]]/page.tsx"
   import { SignUp } from "@clerk/nextjs";
 
@@ -156,7 +156,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
 ### Build your sign in page
 
 
-<CodeBlockTabs options={["App Router", "Pages"]}>
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx copy filename="app/sign-in/page.tsx"
   import { SignIn } from "@clerk/nextjs";
 
@@ -198,7 +198,7 @@ The [`<UserButton />`](/docs/users/user-button) allows users to manage their acc
 
 You can add it anywhere you want, but next to the logo in your main application page is a good start.
 
-<CodeBlockTabs options={["App Router", "Pages"]}>
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```tsx copy filename="app/page.tsx"
 import { UserButton } from "@clerk/nextjs";
 
@@ -330,7 +330,7 @@ export default async function handler(
 
 ### Server side render user data
 
-<Tabs items={["App router", "Pages router"]}>
+<Tabs items={["App Router", "Pages Router"]}>
   <Tab>
     #### **`currentUser()`**
 
