--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -21,7 +21,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
-    <CodeBlockTabs options={["App router", "Pages router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```jsx copy filename="userButtonExample.[jsx/tsx]"
       import {
         ClerkProvider,
