--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -6,7 +6,11 @@ description: The withClerkMiddleware wrapper allows Clerk to access session data
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 
-# `withClerkMiddleware`
+# `withClerkMiddleware()`
+
+<Callout type="warning">
+  `withClerkMiddleware()` is Clerk's previous middleware API and will soon be deprecated. Please use [`authMiddleware()`](/docs/references/nextjs/auth-middleware) going forward.
+</Callout>
 
 The `withClerkMiddleware` wrapper allows Clerk to access session data on the server side allowing you to use any of our server side helpers without any additonal network calls.
 
