--- a/docs/account-portal/redirects.mdx
+++ b/docs/account-portal/redirects.mdx
@@ -3,9 +3,11 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 # Custom Redirects
 
 
-With the Account Portal, we rely on the `redirect_url` query param passed from your application to redirect users after they Sign In or Sign Up. This gives you the ability to dynamically generated redirects based on context.
+With the Account Portal, we rely on the `redirect_url` query param passed from your application to redirect users after they Sign In or Sign Up. This gives you the ability to dynamically generate redirects based on context.
 
-For externally-initiated situations such as User Impersonation or SAML where the context is not available *and the query param has not been defined*, Clerk defaults to your application homepage as a fallback. If you prefer a different fallback path, you can specify the following paths via the 'redirects' tab under Account Portal in your Clerk dashboard.
+For externally-initiated situations such as User Impersonation or SAML where the context is not available and the query param has not been defined, Clerk defaults to your application homepage as a fallback. 
+
+If you prefer a different fallback path, you can specify the following paths via the 'redirects' tab under Account Portal in your Clerk dashboard:
 
 - **After sign-up fallback**: Fallback path to redirect users to after a successful sign up.
 - **After sign-in fallback**: Fallback path to redirect users to after a successful sign in.
